--- a/client/src/CSS/scss_partials/home/_home.scss
+++ b/client/src/CSS/scss_partials/home/_home.scss
@@ -1,5 +1,5 @@
-@import "../utils/variables";
-@import "../utils//mixins";
+@use "../utils/variables" as v;
+@use "../utils/mixins" as m;
 
 .home-container,
 .js-calc-home-container {
@@ -18,78 +18,78 @@
 
 	// Used to to gray-out the word "none" for empty item fields
 	.grayed-out-none {
-		@include stop-text-selection();
+		@include m.stop-text-selection();
 
-		color: $dark-gray;
+		color: v.$dark-gray;
 		opacity: 0.7;
 	}
 
 	// Standard background colors
 	.js-set-project-background-color-dark {
-		background-color: $dark-blue-teal;
+		background-color: v.$dark-blue-teal !important;
 		/* background-color: #0096db; */
 		/* background-color: #a16161; */
 	}
 	.js-set-project-background-color-light {
-		background-color: $blue-teal;
+		background-color: v.$blue-teal !important;
 		/* background-color: #39b3eb; */
 		/* background-color: #c98b8b; */
 	}
 	.js-set-bug-background-color-dark {
-		background-color: $darker-navy-blue;
+		background-color: v.$darker-navy-blue !important;
 	}
 	.js-set-bug-background-color-light {
-		background-color: $light-navy-blue;
+		background-color: v.$light-navy-blue !important;
 	}
 
 
 	// Hover background colors
 	// Standard background colors
 	.js-set-project-background-color-with-hover {
-		background-color: $blue-teal;
+		background-color: v.$blue-teal !important;
 		/* background-color: #39b3eb; */
 		/* background-color: #c98b8b; */
 	}
 	.js-set-project-background-color-with-hover:hover,
 	.js-set-project-background-color-with-hover:active {
-		background-color: $dark-blue-teal;
+		background-color: v.$dark-blue-teal !important;
 		/* background-color: #0096db; */
 		/* background-color: #a16161; */
 	}
 	.js-set-bug-background-color-with-hover {
-		background-color: $light-navy-blue;
+		background-color: v.$light-navy-blue !important;
 	}
 	.js-set-bug-background-color-with-hover:hover,
 	.js-set-bug-background-color-with-hover:active {
-		background-color: $darker-navy-blue;
+		background-color: v.$darker-navy-blue !important;
 	}
 
 
 	// Border colors
 	.js-set-project-border-color-dark {
-		border-color: $dark-blue-teal;
+		border-color: v.$dark-blue-teal !important;
 		/* background-color: #0096db; */
 		/* background-color: #a16161; */
 	}
 	.js-set-project-border-color-light {
-		border-color: $blue-teal;
+		border-color: v.$blue-teal !important;
 		/* background-color: #39b3eb; */
 		/* background-color: #c98b8b; */
 	}
 	.js-set-bug-border-color-dark {
-		border-color: $darker-navy-blue;
+		border-color: v.$darker-navy-blue !important;
 	}
 	.js-set-bug-border-color-light {
-		border-color: $light-navy-blue;
+		border-color: v.$light-navy-blue !important;
 	}
 
 
 	// Text and link color
 	.js-set-project-text-color {
-		color: $teal-link;
+		color: v.$teal-link !important;
 	}
 	.js-set-bug-text-color {
-		color: $blue-link;
+		color: v.$blue-link !important;
 	}
 
 
@@ -97,47 +97,47 @@
 	// ...also used to store colors in redux for bug-pie-chart
 	.status-box-background-color-gray,
 	.js-calc-status-box-background-color-gray {
-		background-color: $status-gray;
+		background-color: v.$status-gray !important;
 	}
 	.status-box-background-color-blue,
 	.js-calc-status-box-background-color-blue {
-		background-color: $status-blue;
+		background-color: v.$status-blue !important;
 	}
 	.status-box-background-color-purple,
 	.js-calc-status-box-background-color-purple {
-		background-color: $status-purple;
+		background-color: v.$status-purple !important;
 	}
 	.status-box-background-color-orange,
 	.js-calc-status-box-background-color-orange {
-		background-color: $status-orange;
+		background-color: v.$status-orange !important;
 	}
 	.status-box-background-color-green,
 	.js-calc-status-box-background-color-green {
-		background-color: $status-green;
+		background-color: v.$status-green !important;
 	}
 	.status-box-background-color-red,
 	.js-calc-status-box-background-color-red {
-		background-color: $status-red;
+		background-color: v.$status-red !important;
 	}
 
 
 	// Used to change text color in status combo-boxes
 	.status-box-text-color-gray {
-		color: $status-gray;
+		color: v.$status-gray !important;
 	}
 	.status-box-text-color-blue {
-		color: $status-blue;
+		color: v.$status-blue !important;
 	}
 	.status-box-text-color-purple {
-		color: $status-purple;
+		color: v.$status-purple !important;
 	}
 	.status-box-text-color-orange {
-		color: $status-orange;
+		color: v.$status-orange !important;
 	}
 	.status-box-text-color-green {
-		color: $status-green;
+		color: v.$status-green !important;
 	}
 	.status-box-text-color-red {
-		color: $status-red;
+		color: v.$status-red !important;
 	}
 }
