--- a/client/src/CSS/scss_partials/home/account/_accountBlurredBackground.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountBlurredBackground.scss
@@ -1,4 +1,4 @@
-@import "../../utils/variables";
+@use "../../utils/variables" as v;
 
 .account-modals-blurred-background {
 	// Must be more than listContainerSearchFilterSortBar.scss,
@@ -6,9 +6,9 @@
 	z-index: 2;
 	position: fixed;
 	left: 0;
-	top: $navbar-height;
+	top: v.$navbar-height;
 	background-color: black;
-	opacity: $blurred-background-opacity;
+	opacity: v.$blurred-background-opacity;
 	height: 100vh;
 	width: 100vw;
 }
