--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemContainerBugPieChart.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemContainerBugPieChart.scss
@@ -1,5 +1,5 @@
-@import "../../../utils/variables";
-@import "../../../utils//mixins";
+@use "../../../utils/variables" as v;
+@use "../../../utils/mixins" as m;
 
 .item-container-bug-pie-chart-component {
 	position: relative;
@@ -7,7 +7,7 @@
 	width: 100%;
 
 	.centered-container {
-		@include horizontal-center();
+		@include m.horizontal-center();
 
 		height: 270px;
 		width: 480px;
@@ -23,19 +23,19 @@
 	}
 
 	.pie-chart {
-		@include horizontal-center();
+		@include m.horizontal-center();
 
-		// stats-container is smaller, so centering causes 
+		// stats-container is smaller, so centering causes
 		// ...more space on left side than pie-chart
 		margin-left: -15px;
 		padding-top: 12px;
 	}
 
 	.stats-container {
-		@include horizontal-center();
+		@include m.horizontal-center();
 
 		padding-top: 12px;
-		width: $item-container-project-bugs-item-box-stats-container-width;
+		width: v.$item-container-project-bugs-item-box-stats-container-width;
 	}
 
 	.stats-container__row {
@@ -50,12 +50,12 @@
 		// ...assigning a different background color to a status-box.
 		// ...the scss for the colors assigned are in home.scss
 		background-color: black;
-		height: $status-box-height;
-		width: $status-box-width;
+		height: v.$status-box-height;
+		width: v.$status-box-width;
 	}
 
 	.stats-container__row__status-box__centered-info {
-		@include dead-center();
+		@include m.dead-center();
 
 		color: white;
 		white-space: nowrap;
@@ -66,15 +66,15 @@
 	.stats-container__row__stats-centering-container {
 		position: relative;
 		display: inline-block;
-		height: $status-box-height;
-		width: $item-container-project-bugs-item-box-stats-container-width -
-			$status-box-width;
+		height: v.$status-box-height;
+		width: v.$item-container-project-bugs-item-box-stats-container-width -
+			v.$status-box-width;
 	}
 
 	.stats-container__row__stats-centering-container__stats {
-		@include dead-center();
+		@include m.dead-center();
 
-		font-size: $slightly-larger-font-size;
+		font-size: v.$slightly-larger-font-size;
 		font-weight: bold;
 		white-space: nowrap;
 		overflow: hidden;
