--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listContainerSearchFilterSortBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listContainerSearchFilterSortBar.scss
@@ -1,36 +1,36 @@
-@import "../../../utils/variables";
-@import "../../../utils//mixins";
+@use "../../../utils/variables" as v;
+@use "../../../utils/mixins" as m;
 
 .search-filter-sort-component,
 .js-calc-search-filter-sort-component {
 	// Must be more than table header so filter button can overlap
 	z-index: 1;
 	position: fixed;
-	top: $navbar-height;
-	border: $search-filter-sort-bar-border-width solid black;
+	top: v.$navbar-height;
+	border: v.$search-filter-sort-bar-border-width solid black;
 	border-left: none;
 	border-right: none;
-	background-color: $search-filter-sort-bar-color;
-	height: $search-filter-sort-bar-height;
+	background-color: v.$search-filter-sort-bar-color;
+	height: v.$search-filter-sort-bar-height;
 	width: 100%;
 	font-family: Arial, Helvetica, sans-serif;
 
 	.centering-container {
 		position: relative;
 		float: left;
-		height: $search-filter-sort-bar-height;
+		height: v.$search-filter-sort-bar-height;
 		// This width is for the new item button. Searchbars width is changed by JS
 		width: 152px;
 	}
 
 	.centering-container__new-item-button {
-		@include stop-text-selection();
-		@include vertical-center();
+		@include m.stop-text-selection();
+		@include m.vertical-center();
 
 		left: 30px;
-		border: $search-filter-sort-bar-new-item-button-border-width solid black;
+		border: v.$search-filter-sort-bar-new-item-button-border-width solid black;
 		background-color: white;
-		height: $search-filter-sort-bar-button-height;
+		height: v.$search-filter-sort-bar-button-height;
 		width: 110px;
 		font-size: 16px;
 		text-align: center;
@@ -38,16 +38,16 @@
 	}
 
 	.centering-container__new-item-button--highlighted {
-		border: ($search-filter-sort-bar-new-item-button-border-width + 1) solid red;
+		border: (v.$search-filter-sort-bar-new-item-button-border-width + 1) solid red;
 	}
 
 	.centering-container__new-item-button__text {
-		@include dead-center();
+		@include m.dead-center();
 		white-space: nowrap;
 	}
 
 	.centering-container__search-group-container {
-		@include dead-center();
+		@include m.dead-center();
 		// This border color should only appear if there was a problem
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in home.scss
@@ -56,7 +56,7 @@
 	}
 
 	.centering-container__search-group-container--with-border {
-		border-width: $list-item-search-bar-group-container-border-width;
+		border-width: v.$list-item-search-bar-group-container-border-width;
 	}
 
 	.centering-container__search-group-container__search-bar {
@@ -69,10 +69,10 @@
 		// This border color should only appear if there was a problem
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in home.scss
-		border: $list-search-bar-border-width solid black;
-		padding: 0px $list-search-bar-padding 0px $list-search-bar-padding;
-		height: $list-search-bar-height;
-		line-height: $list-search-bar-height;
+		border: v.$list-search-bar-border-width solid black;
+		padding: 0px v.$list-search-bar-padding 0px v.$list-search-bar-padding;
+		height: v.$list-search-bar-height;
+		line-height: v.$list-search-bar-height;
 		// Width changed by JS
 		width: 100%;
 		font-size: 14px;
@@ -88,13 +88,13 @@
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in home.scss
 		background-color: black;
-		height: $list-search-bar-height;
-		width: $list-item-search-bar-button-width;
+		height: v.$list-search-bar-height;
+		width: v.$list-item-search-bar-button-width;
 		cursor: pointer;
 	}
 
 	.centering-container__search-group-container__search-bar-button__icon {
-		@include dead-center();
+		@include m.dead-center();
 		color: white;
 	}
 
@@ -107,7 +107,7 @@
 	}
 
 	.filter-area-container__button {
-		@include stop-text-selection();
+		@include m.stop-text-selection();
 
 		// Must be more than filter-area-container__content-dropdown
 		// ...so its top border can be covered to make the two containers look like one
@@ -117,8 +117,8 @@
 		right: 30px;
 		border: 1px solid black;
 		background-color: white;
-		height: $search-filter-sort-bar-button-height;
-		width: $filter-button-width;
+		height: v.$search-filter-sort-bar-button-height;
+		width: v.$filter-button-width;
 		font-size: 16px;
 		text-align: center;
 		cursor: pointer;
@@ -134,14 +134,14 @@
 
 	.filter-area-container__button__text {
 		// Used horizontal-center since resize would move the text
-		@include horizontal-center();
+		@include m.horizontal-center();
 		top: 4px;
-		width: $filter-button-width;
+		width: v.$filter-button-width;
 	}
 
 	.filter-area-container__button__text--active {
 		font-weight: bold;
-		color: $filter-active-color;
+		color: v.$filter-active-color;
 	}
 
 	.filter-area-container__content-dropdown {
@@ -196,12 +196,12 @@
 	}
 
 	.filter-area-container__content-dropdown__content__block__label--active {
-		color: $filter-active-color;
+		color: v.$filter-active-color;
 	}
 
 	.create-item-message-container {
 		position: absolute;
-		top: $search-filter-sort-bar-height + 10;
+		top: v.$search-filter-sort-bar-height + 10;
 		left: 95px;
 	}
 
@@ -228,7 +228,7 @@
 	}
 
 	.create-item-message-container__bend-message-centering-container__arrow-bend {
-		@include vertical-center();
+		@include m.vertical-center();
 
 		background-color: black;
 		height: 6px;
@@ -236,10 +236,10 @@
 	}
 
 	.create-item-message-container__bend-message-centering-container__message {
-		@include vertical-center();
+		@include m.vertical-center();
 
 		left: 25px;
-		font-size: $search-filter-sort-create-item-message-font-size;
+		font-size: v.$search-filter-sort-create-item-message-font-size;
 		color: red;
 	}
 }
